SERVER-645 tailable cursor on capped collections only, won't use indexes